版本兼容调整